clang/test/BSC/Negative/OwnedStruct/destructor/warn_destructor.cbs
// RUN: %clang_cc1 -verify %s

// RUN: %clang %s -o %test.output
// RUN: %test.output
// RUN: %clang -rewrite-bsc %s -o %t-rw.c
// RUN: %clang %t-rw.c -o %t-rw.output
// RUN: %t-rw.output

int y = 0;
owned struct A {  
public:
   ~A(A this){
    y++;
   }
};

 int test_switch() {
    A a ={};
    int xx = 1;
    switch(xx) {
        A b = {}; // expected-warning {{the destructor may be not executed}}
        case 1: {
           A c ={};
           break;
        }
     }
     return 0;
}

int test_switch1<T>() {
    A a ={};
    int xx = 1;
    switch(xx) {
        A b1 = {}; // expected-warning {{the destructor may be not executed}}
        case 1: {
           A c ={};
           return 1;
        }
     }
     return 0;
}
int main(void) {
    test_switch();
    test_switch1<int>();
    return y-4;
}

